2003-06-15  Kevin Vandersloot

	* gweather-applet.c: keybindings for update and forecast.

2003-06-09  Kevin Vandersloot

	* gweather-applet.c: don't tranlsate the degree symbols. Fixes bug #95436.

2003-06-08  Kevin Vandersloot

	* gweather-applet.c: display F or C for temperatures. Fixes bug #95436

2003-06-05  Dennis Cranston <dennis_cranston at yahoo com>

	* gweather-pref.[ch]:  HIGify the location tab.
	
	* gweather-dialog.c:  HIGify the forecast dialog.
	
2003-06-02  Kevin Vandersloot

	* gweather-applet.c: small fix for packing

2003-06-01  Kevin Vandersloot

	* gweather_applet.c: Expand the applet for Fitt's law and pack widgets tighter on larger
	panels.

2003-05-31  Dennis Cranston <dennis_cranston at yahoo com>

	* gweather-pref.c:  Fix newly created mnemonic clash.

2003-05-31  Kevin Vandersloot

	* weather.c, gweather-applet.c: improve the animation a bit and display errors
	better

2003-05-31  Kevin Vandersloot

	* gweather-pref.c, gweather-applet.c: fix crash when toggling temp labels. 
	Also display temperature range for future days. Fixes bug #113783 and part
	of #113981

2003-05-07  Dennis Cranston <dennis_cranston at yahoo com>

	* gweather-pref.c:  HIGify the action area of the preferences 
	dialog.

2003-05-15  Kevin Vandersloot <kfv101@psu.edu>

	* gweather-applet.c, gweather-pref.c: change wording for one of the prefs to make
	more understandable.

2003-05-14  Kevin Vandersloot <kfv101@psu.edu>

	* gweather-dialog.c: fix mispelling. Fixes bug #112970

2003-04-25  Dennis Cranston <dennis_cranston at yahoo com>

	*gweather-pref.c: Minor HIG changes to the preference dialog: 
	add missing mnemonic; add missing colon from label; add units 
	after spin controls; remove dialog separator, set the default 
	button; and fix widget padding.

2003-04-22  Kevin Vandersloot <kfv101@psu.edu>

	* gweather-pref.c: fix saving of update interval. Also limit minimun update interval
	to 30 min to save bandwidth

2003-03-25  Kevin Vandersloot <kfv101@psu.edu>
