@@ -300,7 +300,10 @@ create_countries_widget (GWeatherApplet *applet)
 	tree = gtk_tree_view_new_with_model (GTK_TREE_MODEL (model));
 	g_object_unref (G_OBJECT (model));
 	gtk_tree_view_set_headers_visible (GTK_TREE_VIEW (tree), FALSE);
-
+	set_access_namedesc (tree, 
+				         _("Countries list"),
+				         _("Select the country from the list"));
+				         
 	cell = gtk_cell_renderer_text_new ();
 	column = gtk_tree_view_column_new_with_attributes (_("Country"),
 						    		   cell,
@@ -349,6 +352,9 @@ create_cities_widget (GWeatherApplet *applet)
 	tree = gtk_tree_view_new_with_model (GTK_TREE_MODEL (model));
 	g_object_unref (G_OBJECT (model));
 	gtk_tree_view_set_headers_visible (GTK_TREE_VIEW (tree), FALSE);
+	set_access_namedesc (tree, 
+				         _("Cities list"),
+				         _("Select the city from the list"));
 
 	cell = gtk_cell_renderer_text_new ();
 	column = gtk_tree_view_column_new_with_attributes (_("Location"),
