@@ -1,3 +1,8 @@
+2003-06-16  Kevin Vandersloot
+
+	* gweather-pref.c, location.c, gweather-dialog.c: add back some accesibilty descriptions
+	and stuff. Change Close to Ok for forecast dialog.
+
 2003-06-15  Kevin Vandersloot
 
 	* gweather-applet.c: keybindings for update and forecast.
